Made lists page and some edits

--- a/HTML_boilerplate/index.html
+++ b/HTML_boilerplate/index.html
@@ -25,5 +25,6 @@
 <!-- Inclusion of http at the start of the <a> indicates that it is an ABSOLUTE link,
     without the http:// makes a RELATIVE link which looks for a file in the same directory... -->
 <p>Click this to go to the <a href="box.html">box example</a></p>
+<p>Click this to go to the <a href="lists.html">lists page</a></p>
 </body>
 </html>
