made some fancy buttons

--- a/HTML_boilerplate/index.html
+++ b/HTML_boilerplate/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <h1> My First Web page!</h1>
-    <h2> noice...</h2>
+    <h2 class="home"> Navigation</h2>
+    <nav class="navigation">
+        <ul>
+            <li><a href="Page_two.html" target="_blank" rel="noopener noreferrer">Page two</a></li>
+            <li><a href="box.html" target="_blank" rel="noopener noreferrer">Boxes example</a></li>
+            <li><a href="lists.html" target="_blank" rel="noopener noreferrer">My lists</a></li>
+        </ul>
+    </nav>
     <p>This is a test of the paragraph feature of html...Seems to be working, I have altered the size, colour, and font style of the text.</p>
     <p>This is a test of the <strong>BOLD</strong> feature...</p>
     <p>...and this is how you do an <em>italic</em>...</p>
