Added mochi page

--- a/HTML_boilerplate/index.html
+++ b/HTML_boilerplate/index.html
@@ -13,6 +13,7 @@
         <ul>
             <li><a href="Page_two.html" target="_blank" rel="noopener noreferrer">Page two</a></li>
             <li><a href="box.html" target="_blank" rel="noopener noreferrer">Boxes example</a></li>
+            <li><a href="mochi_img_test.html" target="_blank" rel="noopener noreferrer">Image types</a></li>
             <li><a href="lists.html" target="_blank" rel="noopener noreferrer">My lists</a></li>
         </ul>
     </nav>
